--- a/style.css
+++ b/style.css
@@ -1,12 +1,19 @@
 * {
-  font-family: sans-serif;
-}
-html, body {
-  
-  
+  font-family: 'Nunito', sans-serif;
+  max-width: 800px;
+  margin: 0 auto;
   box-sizing: border-box;
   
-  
+}
+
+html {
+  font-size: 20px;
+  margin: 0 auto;
+}
+.fixed {
+  position: fixed;
+  width: 100%;
+  top: 0;
 }
 .notif {
   background-color: #000000;
@@ -14,28 +21,28 @@ html, body {
   color: white;
   padding-top: 15px;
   text-align: center;
-  font-size: 23px;
+  font-size: 1rem;
+  font-weight: lighter;
 }
 
 a {
   color: white;
 }
 nav {
-  margin-top: 15px;
-  font-size: 20px;
-  
+  font-size: 1rem;
+  background-color: white;
+  height: 30px; 
 }
 
 nav ul {
   display: inline;
   font-weight: bold;
-  
 }
 
 nav li {
 	display: inline;
   margin: 0 20px 0 0;
-  float: right;
+  
 }
 
 li:first-child {
@@ -43,11 +50,16 @@ li:first-child {
 }
 
 h1 {
+  
   text-align: center;
-  font-size: 80px;
-  width: 60%;
-	margin:70px auto;
+  font-size: 2.85rem;
+  font-weight: bold;
+  width: 500px;
+  padding-top: 70px;
+  padding-bottom: -5px;
+  
 }
+
 
 .arrow {
   height: 40px;
@@ -56,59 +68,58 @@ h1 {
   transform: rotate(90deg);
 }
 
+
+/*
 .picture {
   display: block;
   margin: auto;
 }
-
-h2 {
+*/
+.title {
   float: left;
-  margin-left: 20px;
+  font-size: 1rem;
+  font-weight: bolder;
+  padding-top: 20px;
 }
 
 .arrow-right {
   width: 40px;
   float: right;
   margin: 20px;
-  
+  margin-top: -30px;
 }
 
 .arrow1 {
   width: 60px;
   float: right;
-  
+  margin-top: -40px; 
+  padding-right: 15px;
 }
 
 .gray {
   background-color: silver;
   height: 50px;
-  margin: 20px;
+  width: 100%;
   padding-left: 10px;
   
 }
 
 .gray h3 {
   float: left;
+  margin-top: 10px; 
 }
 
-}
-h4 {
-  float: left;
-  position: relative;
-
-
-}
 .warrow {
   float: right;
   width: 60px;
-  padding-top: 290px;
+  padding-top: 180px;
   padding-right: 20px;
 }
 .black {
   background-color: black;
   height: 600px;
-  margin: 20px;
   color: white;
+  width: 100%;
 }
 .main-text {
   
@@ -117,7 +128,7 @@ h4 {
   
 }
 span {
-  padding-top: 300px;
+  padding-top: 250px;
   padding-left: 20px; 
   float: left;
   font-weight: bolder;
@@ -127,25 +138,25 @@ span {
   background-color: black;
   height: 400px;
   color: white;
-  margin: 20px;
+  width: 100%;
 }
-.contact {
-  padding-top: 180px;
-  padding-left: 20px; 
+ .contact {
+   
   float: left;
   font-weight: bolder;
   font-size: 20px;
 }
+
  
 .warrow1 {
+  border: 1px solid red;
   float: right;
   width: 60px;
-  padding-top: 170px;
-  padding-right: 20px;
+  
 }
 
 .privacy {
-  margin-top: -15px;
+  margin-top: 5px;
   text-align: center;
   font-size: 20px;
   font-weight: bold;
